[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predictive-reliability-modeling"
version = "0.1.0"
description = "Predictive Reliability Modeling for Hybrid AI Web Agents: A Small-Scale Proof of Concept"
authors = [{name = "Your Name"}]
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "jupyter",
    "requests",
    "fastapi",
    "uvicorn",
    "httpx",
    "mapie",
    "crepes",
    "statsmodels",
    "scipy"
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["src"]